--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body {
 }
 
 .logo{
-    width: 120px;
+    width: 100px;
 }
 
 
@@ -125,14 +125,13 @@ body {
     display: flex;
     justify-content: flex-end;
     gap:50px;
-    margin-top: -50px;
+    align-items: flex-start;
     
 }
 
 .sous-header{
 
-   margin-top: 100px;
-
+   margin-top: 80px;
 
 }
 
@@ -168,6 +167,60 @@ body {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 
+}
+
+
+.button-filtres :hover{
+
+    background-color: #0065FC;
+    
+   
+}
+
+.button-filtres{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.Filtres{
+    display: flex; 
+    justify-content:flex-start;
+    gap:20px;
+    flex-direction: row;
+    
+}
+
+.economique-button{
+
+    border-radius: 100px;
+    border-width: 1px;
+    border-color: lightgrey;
+    padding: 10px;
+    font-weight: 150px;
+
+
+}
+
+.family-button{
+
+    border-radius:100px;
+    border-width: 1px;
+    padding:10px;
+}
+
+.romantique-button{
+
+    border-radius:100px;
+    border-width:1px;
+    padding:10px;
+}
+
+.pepites-button{
+
+    border-radius:100px;
+    border-width:1px;
+    padding:10px;
 }
 
 
