--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,52 @@ body {
     gap:20px;
 }
 
-.footer_{
+.activites_cards img{
+
+    object-fit:cover;
+
+}
+
+
+ .port_marseille{
+
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    
+
+ }
+
+ .fort_pomegues{
+
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    
+ }
+
+ .calanques_{
+
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    
+
+ }
+
+ .notre_dame{
+
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    
+ }
+
+ .footer_{
     margin-top: 20px;
     display: flex;
     justify-content: space-between;
@@ -238,9 +283,6 @@ body {
     background-color: white;
 
 }
-
-
-
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
