--- a/css/style.css
+++ b/css/style.css
@@ -1,288 +1,31 @@
-/****** General ***********/
-* {
-    font-family: 'Raleway', sans-serif;
-}
+@import "general.css";
+@import "header.css";
+@import "hebergement.css";
 
-:root {
-    --main-color: #0065FC;
-    --main-bg-color: #F2F2F2;
-    --filter-bg-color: #DEEBFF;
-}
+@import "footer.css";
 
-.fa-solid {
-    color: var(--main-color);
-}
-
-body {
-    display: flex;
-    justify-content: center;
-}
-
-.main-container {
-    width: 100%;
-    max-width: 1440px;
-    padding: 0 50px;
-    box-sizing: border-box;
-}
-
-.section-title {
-    margin: 0;
-    font-size: 22px;
-}
-
-.card {
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-}
-
-.card img {
-    object-fit: cover;
-}
-
-.card-title {
-    font-size: 16px;
-}
-
-.euro {
-    font-weight: 700;
-}
-
-.neutralStar {
-    color: var(--main-bg-color)
-}
-
-/****** Hebergements And Populaires ***********/
-.hebergements-and-populaires {
-    display: flex;
-    justify-content: space-between;
-}
-
-.hebergements-and-populaires section {
-    background-color: var(--main-bg-color);
-    border-radius: 20px;
-    padding: 30px;
-    box-sizing: border-box;
-}
-
-/****** Hebergements ***********/
-.hebergements {
-    width: 65%;
-}
-
-/****** Populaires ***********/
-.populaires {
-    width: 32%;
-}
-
-.populaires-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.populaires-cards .card {
-    display: flex;
-    margin-top: 33px;
-}
-
-.populaires-cards img {
-    width: 33%;
-    height: 134px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-}
-
-.populaires-cards .card-content {
-    width: 67%;
-    padding-left: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-}
-
-.populaires-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
-}
-
-.populaires-cards .card-subtitle {
-    margin: 0;
-}
-
-.populaires-cards .card-rating {
-    margin-bottom: 5px;
-}
-
-.logo{
-    width: 100px;
-}
-
-
-.nav-link{
-    display: flex;
-    justify-content: flex-end;
-    gap:50px;
-    align-items: flex-start;
-    
-}
 
 .sous-header{
-
-   margin-top: 80px;
-
+    display:none;
 }
-
-
 
 .geolocalisation{
-
-    display: flex;
-}
-
-.geolocation-button{
-
-    border: solid;
-    border-width: 1px;
-    background-color: lightgray;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    padding: 10px;
-
-}
-
-.search-domain{
-
-    padding: 10px;
-
-
-}
-
-.search-button{
-    background-color: blue;
-    padding:10px;
-    color:white;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-
-}
-
-
-.button-filtres :hover{
-
-    background-color: #0065FC;
-    
-   
-}
-
-.button-filtres{
-    display: flex;
-    align-items: center;
-    gap: 20px;
+    display:none;
 }
 
 .Filtres{
-    display: flex; 
-    justify-content:flex-start;
-    gap:20px;
-    flex-direction: row;
-    
+    display:none;
 }
 
-.economique-button{
+/* .hebergements-and-populaires{
+    display:none;
+} */
 
-    border-radius: 100px;
-    border-width: 1px;
-    border-color: lightgrey;
-    padding: 10px;
-    font-weight: 150px;
-
-
+.activites_flex{
+    display:none;
 }
 
-.family-button{
-
-    border-radius:100px;
-    border-width: 1px;
-    padding:10px;
-}
-
-.romantique-button{
-
-    border-radius:100px;
-    border-width:1px;
-    padding:10px;
-}
-
-.pepites-button{
-
-    border-radius:100px;
-    border-width:1px;
-    padding:10px;
-}
-
-.activites_cards{
-
-    display: flex;
-    flex-direction:row;
-    gap:20px;
-}
-
-.activites_cards img{
-
-    object-fit:cover;
-
-}
-
-
- .port_marseille{
-
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-    
-
- }
-
- .fort_pomegues{
-
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-    
- }
-
- .calanques_{
-
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-    
-
- }
-
- .notre_dame{
-
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-    
- }
-
- .footer_{
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-    background-color: white;
-
-}
+footer{display:none;}
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
@@ -326,28 +69,13 @@ body {
 @media (max-width: 767.98px) {
    
     .sous-header{
-
         padding-left: 150px;
         font-size: smaller;
-
-
-
     }
-
 
     .geolocalisation{
 
         margin-left: 150px;
     }
-
-
-
-
-
-
-
-
-
-
 
 }
