v10 Filtres + recherche OK

--- a/css/filtres.css
+++ b/css/filtres.css
@@ -19,10 +19,7 @@
     justify-content:flex-start;
     gap:20px;
     flex-direction: row;
-    margin-top: 20px;
-   
-   
-    
+    margin-top: 20px; 
 }
 
 .economique-button{
@@ -32,10 +29,9 @@
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    
-    
-
-
+    border-color:#d9d9d9;
+    border-style:solid;
+    background-color: white;
 }
 
 .family-button{
@@ -45,6 +41,10 @@
     padding:10px;
     padding-left: 20px;
     padding-right: 20px;
+    border-color: #d9d9d9;
+    border-style:solid;
+    background-color: white;
+    
     
     
     
@@ -58,6 +58,9 @@
     padding:10px;
     padding-left: 20px;
     padding-right: 20px;
+    border-color: #d9d9d9;
+    border-style: solid;
+    background-color: white;
     
     
 }
@@ -69,6 +72,11 @@
     padding:10px;
     padding-left: 20px;
     padding-right: 20px;
+    border-color:#d9d9d9;
+    border-style:solid;
+    background-color: white;
     
     
 }
+
+
