--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@ footer{
     margin-top: 20px;
     display: flex;
     justify-content: space-between;
-    background-color:#D9D9D9;
+    background-color:#F2F2F2;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
     padding: 20px;
    
