--- a/css/geolocalisation.css
+++ b/css/geolocalisation.css
@@ -10,16 +10,21 @@
 
     border: solid;
     border-width: 1px;
-    background-color:#D9D9D9;
+    background-color: #F2F2F2;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     padding: 10px;
+    border-color: #F2F2F2;
+    padding-left: 15px;
+    padding-right: 15px;
 
 }
 
 .search-domain{
 
     padding: 10px;
+    border: solid;
+    border-color: white;
 
 
 }
@@ -30,5 +35,7 @@
     color:var(--main-bg-color);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+    border: solid;
+    border-color: var(--main-color);
 
 }
