--- a/css/geolocalisation.css
+++ b/css/geolocalisation.css
@@ -25,7 +25,7 @@
     padding: 10px;
     border: solid;
     border-color: white;
-
+    opacity: 200%;
 
 }
 
@@ -37,5 +37,7 @@
     border-bottom-right-radius: 10px;
     border: solid;
     border-color: var(--main-color);
+    font-weight: 700;
 
 }
+
