--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -38,7 +38,7 @@
 /****** Hebergements ***********/
 .hebergements {
     width: 65%;
-    display: none;
+    /* display: none; */
 }
 
 .hebergements-title {
