--- a/css/general.css
+++ b/css/general.css
@@ -53,13 +53,18 @@ h1{
 
 .phrase_sous_localisation{
 
-    font-style: italic;
+    margin-bottom: 50px;
     
 }
 
 .fa-solid .fa-circle-info{
 
     padding-right: 20px;
+}
+
+.i_logo{
+
+    padding-right: 10px;
 }
 
 
