--- a/css/activites.css
+++ b/css/activites.css
@@ -2,8 +2,6 @@
 
     margin-top: 100px;
     margin-bottom:100px;
-    
-
 
 }
 
@@ -17,10 +15,10 @@
 }
 
 .activites_cards img{
-    height: 450px;
+    height: 400px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    width: 300px;  
+    width: 100%;  
 
 }
 .activites_cards .card{
