--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,7 @@
     .populaires-cards{
 
         flex-direction: column;
+        
        
         
     }
@@ -213,7 +214,9 @@
         flex-direction: column;
     }
 
-
+    .hebergements-and-populaires{
+        flex-direction: column-reverse;
+    }
 
 
 
