--- a/css/general.css
+++ b/css/general.css
@@ -59,12 +59,22 @@ h1{
 
 .fa-solid .fa-circle-info{
 
-    padding-right: 20px;
+    margin-right: 20px; 
+    
+    
 }
 
 .i_logo{
 
+    padding-left: 10px;
     padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: 1px solid #d9d9d9;
+    border-radius: 50%;
+    font-size: small;
+   
+
 }
 
 
